--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,13 @@
-# Web Framework & Server
 fastapi
 uvicorn
-
-# User Interface
 streamlit
-
-# Core AI & NLP Libraries
-langchain
+langchain==0.1.20
+langchain-community==0.0.38
+langchain-huggingface==0.0.3
 transformers
 torch
 sentence-transformers
-
-# Vector Database
-chromadb-client
-
-# Data Ingestion
+chromadb==0.4.24
 python-docx
+docx2txt
+pydantic<2
